Update 8.2 - Identify and apply security controls in software development ecosystems.md

--- a/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
+++ b/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
@@ -6,7 +6,7 @@ All programming languages are essentially tools to tell machines what to do, usi
 **High-level languages** like Python, Java, or C# prioritize developer efficiency and readability. 
 **Low-level languages** like Assembly or even C expose memory management and hardware interaction, making them favorites for performance-intensive or system-level applications — and unfortunately, also for many exploits.
 
-Take C, for instance. It has no built-in memory protection, which is why buffer overflows are rampant in C-based software. An attacker can exploit this to inject malicious code into memory and hijack execution. This alone makes C and C++ programs high-priority targets for secure code reviews. Java, on the other hand, runs in a virtual machine, which creates a safer sandbox, but it’s not invulnerable. Deserialization attacks and misused class loaders are real threats. Python is great for rapid development and often used for scripting in penetration testing tools like those in Kali Linux, but it can become dangerous if developers rely on unsafe methods like eval() or use outdated libraries.
+Take C, for instance. It has no built-in memory protection, which is why buffer overflows are rampant in C-based software. An attacker can exploit this to inject malicious code into memory and hijack execution. This alone makes C and C++ programs high-priority targets for secure code reviews. Java, on the other hand, runs in a runtim environment, which creates a safer sandbox, but it’s not invulnerable. Deserialization attacks and misused class loaders are real threats. Python is great for rapid development and often used for scripting in penetration testing tools like those in Kali Linux, but it can become dangerous if developers rely on unsafe methods like eval() or use outdated libraries.
 
 :necktie: Security is about understanding where the weaknesses can hide — and many of them are born in the code itself.
 
