--- a/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
+++ b/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
@@ -60,13 +60,15 @@ Developers don’t always verify what they include. They might grab a Node.js pa
 
 How can we defend against this? 
 
-The first principle is **visibility**. You can’t protect what you can’t see. Software Composition Analysis tools like OWASP Dependency-Check or commercial scanners from vendors like Snyk and WhiteSource help you map all the libraries and versions your code depends on.
+- The first principle is **visibility**. You can’t protect what you can’t see. Software Composition Analysis tools like OWASP Dependency-Check or commercial scanners from vendors like Snyk and WhiteSource help you map all the libraries and versions your code depends on.
 
-The second principle is **trust**. Libraries should come from trusted sources with strong reputation and digital signing. Some enterprises host their own internal registries or artifact repositories—think of it like having your own supermarket instead of letting every developer shop in the wild.
+- The second principle is **trust**. Libraries should come from trusted sources with strong reputation and digital signing. Some enterprises host their own internal registries or artifact repositories—think of it like having your own supermarket instead of letting every developer shop in the wild.
 
-The third principle is **policy**. Don’t allow developers to pull arbitrary packages from the internet into production. Set policies for reviewing and approving libraries, especially those with native code or deep system access.
+- The third principle is **policy**. Don’t allow developers to pull arbitrary packages from the internet into production. Set policies for reviewing and approving libraries, especially those with native code or deep system access.
 
-Another key risk area is **licensing**. Not all security risks are technical. Many open-source libraries use licenses like GPL or AGPL that require you to open source your entire application if you use them. That’s a compliance nightmare if you’re in a regulated industry or if your software is proprietary. A smart security leader must understand not just CVEs but also legal exposure. This is especially true in mergers and acquisitions, where due diligence must include software bill of materials (SBOMs) to find out exactly what’s under the hood of the acquired code.
+Another key risk area is **licensing**. Not all security risks are technical. Many open-source libraries use licenses like GPL or AGPL that require you to open source your entire application if you use them. That’s a compliance nightmare if you’re in a regulated industry or if your software is proprietary. 
+
+:necktie: We must understand not just CVEs but also legal exposure. This is especially true in mergers and acquisitions, where due diligence must include software bill of materials (SBOMs) to find out exactly what’s under the hood of the acquired code.
 
 ### Open Questions ###
 
@@ -107,7 +109,7 @@ When we talk about toolsets in the software development lifecycle, we’re talki
 | **Infrastructure-as-Code (IaC) Tools** | Define and manage cloud infrastructure through code rather than manual configuration. | Creates auditable, repeatable, and secure infrastructure setups that can be version-controlled and rolled back when necessary. | Terraform |
 
 
-:bulb: every tool in this ecosystem is either a potential defense mechanism or a possible attack surface. The tools don’t just make development faster—they shape how secure your code is, how traceable changes are, how quickly you can detect issues, and how easily you can recover from failure. 
+:bulb: Every tool in this ecosystem is either a potential defense mechanism or a possible attack surface. The tools don’t just make development faster—they shape how secure your code is, how traceable changes are, how quickly you can detect issues, and how easily you can recover from failure. 
 
 ### Open Questions ###
 
@@ -178,13 +180,17 @@ Let’s not forget **code suggestion features powered by AI**, which are becomin
 
 Runtime is is the phase in the software development lifecycle where code comes to life, interacting with live systems, real users, and unpredictable environments. It is no longer theory, no longer static lines in an editor—now it’s execution, behavior, and consequences. 
 
-Security issues that might have seemed hypothetical in development can now wreak havoc if not anticipated and controlled. Let’s break this down. When software is running, it consumes resources—CPU, memory, disk, network. It interfaces with the operating system, libraries, user input, files, and databases. This live interaction makes runtime the most dangerous stage for security breaches. Imagine a web server. At runtime, it parses HTTP requests, opens files, manages sessions, interacts with a database, and probably has dynamic elements like user logins, file uploads, and input fields. Every one of those points is a potential entry for an attacker. 
+Security issues that might have seemed hypothetical in development can now wreak havoc if not anticipated and controlled. 
+
+When software is running, it consumes resources—CPU, memory, disk, network. It interfaces with the operating system, libraries, user input, files, and databases. This live interaction makes runtime the most dangerous stage for security breaches. Imagine a web server. At runtime, it parses HTTP requests, opens files, manages sessions, interacts with a database, and probably has dynamic elements like user logins, file uploads, and input fields. Every one of those points is a potential entry for an attacker. 
 
 At runtime, memory handling becomes a frontline battlefield. Buffer overflows, for instance, happen when input exceeds the bounds of a buffer, and if the program does not validate this input, it could overwrite adjacent memory. This leads to arbitrary code execution—a classic technique in many cyberattacks, including remote code execution exploits. 
 
 Code scanning tools won’t catch every edge case. Some bugs only show themselves under specific runtime conditions like unusual input, concurrency, or resource exhaustion.
 
-Another major topic is the runtime environment itself. Applications don’t run in a vacuum—they run in environments like Java Virtual Machines (JVMs), .NET Common Language Runtime (CLR), or containerized runtimes like Docker. These environments are meant to isolate, manage resources, and improve portability, but they come with their own security implications. Misconfigured containers, outdated virtual machines, or improperly secured interpreters can expose systems. For instance, running a Python application with excessive permissions in its Docker container invites privilege escalation. Similarly, runtime misconfiguration of memory, ports, or logging paths can lead to data leaks or DoS conditions. One forgotten debug flag can be the reason an application exposes internal secrets.
+Another major topic is the runtime environment itself. Applications don’t run in a vacuum—they run in environments like Java Virtual Machines (JVMs), .NET Common Language Runtime (CLR), or containerized runtimes like Docker. These environments are meant to isolate, manage resources, and improve portability, but they come with their own security implications. Misconfigured containers, outdated virtual machines, or improperly secured interpreters can expose systems. For instance, running a Python application with excessive permissions in its Docker container invites privilege escalation. Similarly, runtime misconfiguration of memory, ports, or logging paths can lead to data leaks or DoS conditions. 
+
+:bulb: One forgotten debug flag can be the reason an application exposes internal secrets.
 
 Then there’s **user input**. At runtime, any field where a user can type something—a login box, a comment section, a search bar—is a potential attack surface. If developers haven’t implemented runtime input validation or sanitization, attackers can inject SQL, scripts, or even shell commands. Runtime defenses like input whitelisting, output encoding, and contextual escaping are essential. Remember, security controls are most effective when they act as close to the threat surface as possible. So runtime input validation is stronger than relying only on static policies.
 
@@ -224,9 +230,9 @@ Continuous Integration and Continuous Delivery (or Continuous Deployment) repres
 
 :necktie: Automation allows fast, consistent enforcement of security policies, but it also means mistakes and malicious code can propagate just as fast if not checked carefully.
 
-**CI** stands for Continuous Integration, which focuses on developers frequently merging their code into a shared repository. Every change triggers an automated process that builds the software, runs unit tests, static analysis, and often some form of security scanning. The idea is to catch problems early when they are small and easier to fix. The key here is to understand how source control security, automated testing, and static code analysis work together to form a first line of defense. If an attacker gets access to a developer’s machine and commits malicious code, CI is where that code is built, and possibly where it's stopped—if there are good checks in place. If not, the malicious code may sail through to production. This is why protecting the CI environment, including the runners, agents, and credentials they use, is absolutely critical. These systems often have access to secrets, tokens, and deployment pipelines, making them high-value targets. Treat your CI server like production.
+**CI** stands for **Continuous Integration**, which focuses on developers frequently merging their code into a shared repository. Every change triggers an automated process that builds the software, runs unit tests, static analysis, and often some form of security scanning. The idea is to catch problems early when they are small and easier to fix. The key here is to understand how source control security, automated testing, and static code analysis work together to form a first line of defense. If an attacker gets access to a developer’s machine and commits malicious code, CI is where that code is built, and possibly where it's stopped—if there are good checks in place. If not, the malicious code may sail through to production. This is why protecting the CI environment, including the runners, agents, and credentials they use, is absolutely critical. These systems often have access to secrets, tokens, and deployment pipelines, making them high-value targets. Treat your CI server like production.
 
-**CD**, on the other hand, stands for Continuous Delivery or Continuous Deployment, depending on how automated the release process is. With Continuous Delivery, the software is always in a deployable state, but a human may still hit the release button. With Continuous Deployment, that button is pressed automatically, and every validated change gets shipped. From a security perspective, the deployment phase brings unique risks. For example, if the CD pipeline deploys directly to cloud environments using service credentials, those credentials need tight control. If an attacker gets into the CD pipeline, they might not just push malicious code—they might reconfigure infrastructure, exfiltrate secrets, or deploy malware. That’s why role-based access control (RBAC), secrets management, and logging become non-negotiable in CI/CD systems. You wouldn’t leave a root key lying around on a production server, and you shouldn’t leave hardcoded credentials in a pipeline YAML file either.
+**CD**, on the other hand, stands for **Continuous Delivery** or **Continuous Deployment**, depending on how automated the release process is. With Continuous Delivery, the software is always in a deployable state, but a human may still hit the release button. With Continuous Deployment, that button is pressed automatically, and every validated change gets shipped. From a security perspective, the deployment phase brings unique risks. For example, if the CD pipeline deploys directly to cloud environments using service credentials, those credentials need tight control. If an attacker gets into the CD pipeline, they might not just push malicious code—they might reconfigure infrastructure, exfiltrate secrets, or deploy malware. That’s why role-based access control (RBAC), secrets management, and logging become non-negotiable in CI/CD systems. You wouldn’t leave a root key lying around on a production server, and you shouldn’t leave hardcoded credentials in a pipeline YAML file either.
 
 CI/CD is also about culture. Security needs to shift left—that is, move earlier in the development process—and CI/CD makes this possible. Static application security testing (SAST), software composition analysis (SCA), and even container scanning can be part of the pipeline. This means that before a piece of code ever runs in production, it has been analyzed for vulnerabilities, checked for outdated libraries, and validated against policies. For example, if a developer tries to import a version of Log4j with a known CVE, the pipeline should stop the build and alert the team. This is a powerful way to automate policy enforcement, reduce exposure, and avoid security regression. It also builds security awareness into development itself, making it part of the workflow instead of an afterthought.
 
