Update 8.2 - Identify and apply security controls in software development ecosystems.md

--- a/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
+++ b/DOMAIN8: Software Development Security/8.2 - Identify and apply security controls in software development ecosystems.md
@@ -226,7 +226,7 @@ What types of runtime conditions can reveal vulnerabilities that static analysis
 
 ## 8.2.6 Continuous Integration and Continuous Delivery (CI/CD) ##
 
-Continuous Integration and Continuous Delivery (or Continuous Deployment) represents a foundational shift in how modern software is built, tested, and released. Understanding CI/CD isn't about becoming a DevOps engineer but about grasping how automation in these pipelines can either be a security enabler or a disaster multiplier. Let’s walk through it. Imagine the old world of software: teams wrote code for months, then threw it over the wall to operations. Deployment was a big bang event full of surprises, often on a Friday night, with rollback plans in case everything went sideways. CI/CD changed that by saying: what if we build, test, and deliver small changes continuously, using automation to reduce human error and speed up feedback? From a security point of view,as usual, this is a double-edged sword.
+Continuous Integration and Continuous Delivery (or Continuous Deployment) represents a foundational shift in how modern software is built, tested, and released. Understanding CI/CD isn't about becoming a DevOps engineer but about grasping how automation in these pipelines can either be a security enabler or a disaster multiplier. In the old world of software teams wrote code for months, then threw it over the wall to operations. Deployment was a big bang event full of surprises, often on a Friday night, with rollback plans in case everything went sideways. CI/CD changed that by saying: what if we build, test, and deliver small changes continuously, using automation to reduce human error and speed up feedback? From a security point of view,as usual, this is a double-edged sword.
 
 :necktie: Automation allows fast, consistent enforcement of security policies, but it also means mistakes and malicious code can propagate just as fast if not checked carefully.
 
@@ -236,7 +236,54 @@ Continuous Integration and Continuous Delivery (or Continuous Deployment) repres
 
 CI/CD is also about culture. Security needs to shift left—that is, move earlier in the development process—and CI/CD makes this possible. Static application security testing (SAST), software composition analysis (SCA), and even container scanning can be part of the pipeline. This means that before a piece of code ever runs in production, it has been analyzed for vulnerabilities, checked for outdated libraries, and validated against policies. For example, if a developer tries to import a version of Log4j with a known CVE, the pipeline should stop the build and alert the team. This is a powerful way to automate policy enforcement, reduce exposure, and avoid security regression. It also builds security awareness into development itself, making it part of the workflow instead of an afterthought.
 
-Think of the CI/CD pipeline like an assembly line in a car factory. Each stage—building, testing, packaging, deploying—adds value or checks for defects. Now imagine someone sneaking a faulty brake system into one of the cars. If your quality control checks at each stage are weak or nonexistent, that defect makes it all the way to the customer. In CI/CD, the defects can be vulnerabilities, backdoors, misconfigurations, or even embedded malware. That’s why the CISSP needs to understand how to secure the supply chain, both internal and external. Open-source packages, third-party libraries, and container images can all become Trojan horses. Tools like SBOMs (Software Bill of Materials) and trusted registries help, but they must be integrated into the pipeline and reviewed continuously.
+Think of the CI/CD pipeline like an assembly line in a car factory. Each stage—building, testing, packaging, deploying—adds value or checks for defects. Now imagine someone sneaking a faulty brake system into one of the cars. If your quality control checks at each stage are weak or nonexistent, that defect makes it all the way to the customer. In CI/CD, the defects can be vulnerabilities, backdoors, misconfigurations, or even embedded malware. That’s why we need to understand how to secure the supply chain, both internal and external. Open-source packages, third-party libraries, and container images can all become Trojan horses. Tools like SBOMs (Software Bill of Materials) and trusted registries help, but they must be integrated into the pipeline and reviewed continuously.
+
+```mermaid
+%%{init: {"theme": "base", "themeVariables": { "primaryColor": "#f5f5f5", "edgeLabelBackground":"#e0e0e0", "fontSize":"14px", "primaryTextColor":"#222", "lineColor":"#999", "nodeBorder":"#ccc", "mainBkg":"#fafafa"}}}%%
+flowchart TD
+
+    subgraph CI["Continuous Integration - CI"]
+        A1["Developers commit code frequently"]
+        A2["Automated build, tests, static analysis"]
+        A3["Detect bugs and vulnerabilities early"]
+        A4["Malicious code blocked if checks strong"]
+        A5["Protect CI environment, agents, runners, secrets"]
+
+        A1 --> A2 --> A3 --> A4 --> A5
+    end
+
+    subgraph CD["Continuous Delivery and Deployment - CD"]
+        B1["Software always deployable"]
+        B2["Automated or manual release"]
+        B3["Risk of attacker modifying infrastructure or stealing secrets"]
+        B4["Secure service credentials and access"]
+        B5["Use RBAC, audit logs, and secret management"]
+
+        B1 --> B2 --> B3 --> B4 --> B5
+    end
+
+    subgraph SECURITY["Security in the CI/CD Pipeline"]
+        C1["Shift security left through SAST, SCA, and container scans"]
+        C2["Block builds with known vulnerabilities"]
+        C3["Verify dependencies and open-source integrity"]
+        C4["Use SBOMs and trusted registries"]
+        C5["Build security awareness in development"]
+
+        C1 --> C2 --> C3 --> C4 --> C5
+    end
+
+    subgraph ANALOGY["Assembly Line Analogy"]
+        D1["The software pipeline works like a factory line"]
+        D2["Each stage adds value or checks for defects"]
+        D3["Weak checks allow vulnerabilities to reach production"]
+        D4["Strong controls create a safer supply chain"]
+
+        D1 --> D2 --> D3 --> D4
+    end
+
+    CI --> CD --> SECURITY --> ANALOGY
+
+```
 
 Pipeline security also means thinking about infrastructure as code (IaC). Many deployments are defined in YAML, Terraform, or Helm charts. If someone misconfigures an S3 bucket to be public or forgets to turn off SSH access on a cloud instance, that becomes part of the deployment—and now your vulnerability is repeatable. For this reason, policy-as-code tools like Open Policy Agent (OPA) can be used to enforce configuration standards as part of the pipeline. You want security gates that are enforceable, visible, and explainable to both developers and auditors. 
 
@@ -266,7 +313,7 @@ Pipeline security also means thinking about infrastructure as code (IaC). Many d
 
 ## 8.2.7 Software configuration management (CM) ##
 
-Software configuration management is one of those behind-the-scenes practices that, if ignored, will silently corrode your security posture from the inside out. It’s not flashy, it doesn’t scream for attention, but if you’ve ever had to deal with a rollback nightmare, or couldn’t tell which version of a script was deployed in production last night, you already know why SCM matters.
+Software configuration management is one of those behind-the-scenes practices that, if ignored, will silently corrode your security posture from the inside out. It doesn’t scream for attention, but if you’ve ever had to deal with a *rollback nightmare*, or couldn’t tell which version of a script was deployed in production last night, you already know why SCM matters.
 
 :necktie: SCM is the discipline that tracks and controls changes in software, ensuring that every component, every tweak, every configuration has a known origin, a clear purpose, and a trusted state. 
 
@@ -276,7 +323,7 @@ The first principle SCM supports is **integrity**. Without a system that tracks 
 
 **Configuration drift** happens when systems or environments slowly diverge from their expected state. This is especially common in cloud deployments, where teams spin up resources dynamically, patch them, tweak them for testing, and forget to reset them. The result? Production no longer matches your approved configuration baseline. An attacker who understands this can exploit forgotten test settings, leftover credentials, or mismatched firewall rules. SCM tools can detect this drift. For example, tools like Puppet, Chef, Ansible, or Terraform don’t just deploy infrastructure – they define the desired state, and regularly compare it to what’s running. If something’s out of place, they flag it or fix it automatically. That’s configuration as code – not just automation, but enforcement of known-good states. When SCM is integrated with these tools, you gain the power to prevent configuration-based vulnerabilities at scale.
 
-Another key concept in SCM is **traceability**. In a secure environment, we don’t just want to know what is running, we want to know who changed it, when, and why. When a breach happens – and let’s be realistic, it will – the first thing the response team needs is a clear change history. If your logs say a config file was modified, but you can’t trace it back to a commit or a change request, you’ve lost forensic visibility. SCM provides that audit trail. Every change is documented, peer-reviewed, signed off, and ideally linked to a ticket in a change management system. In mature organizations, this auditability is baked into the CI/CD pipeline: changes can’t be merged unless they meet policy. This might seem like bureaucracy, but in security, trust comes from verification, and SCM is your chain of custody.
+Another key concept in SCM is **traceability**. In a secure environment, we don’t just want to know what is running, we want to know who changed it, when, and why. When a breach happens, the first thing the response team needs is a clear change history. If your logs say a config file was modified, but you can’t trace it back to a commit or a change request, you’ve lost forensic visibility. SCM provides that audit trail. Every change is documented, peer-reviewed, signed off, and ideally linked to a ticket in a change management system. In mature organizations, this auditability is baked into the CI/CD pipeline: changes can’t be merged unless they meet policy. This might seem like bureaucracy, but in security, trust comes from verification, and SCM is your chain of custody.
 
 There’s also a **supply chain** angle. With modern applications depending on hundreds of libraries, packages, container images, and third-party services, SCM helps you define and freeze dependencies. When Log4j hit, the teams with proper SCM practices were able to search their codebases and identify impacted systems quickly. Others had no idea which version was running where. SCM supports reproducibility – the ability to rebuild the same artifact with the same behavior at any time. That’s gold during incident response or compliance audits. In regulated industries, it’s not enough to say “*we fixed it*” – you need to prove what was running, who approved it, and how it changed. SCM turns “*we think so*” into “*here’s the record.*”
 Another area to focus on is access control within SCM systems themselves. Git repositories, configuration management platforms, and CI/CD tools must be tightly secured. If an attacker compromises your SCM platform, they own your software supply chain. 
