Update 8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md

--- a/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
+++ b/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
@@ -22,6 +22,16 @@ Agile offers a golden opportunity to integrate security continuously, rather tha
 
 Now imagine taking Agile and stretching it over a large enterprise with hundreds of developers. That’s where **Scaled Agile Framework, or SAFe**, comes in. SAFe isn’t a different methodology but an extension of Agile that enables coordination across many teams working toward a common goal. Think of it like managing a fleet of Agile boats all navigating in the same direction. SAFe introduces roles like Release Train Engineer and emphasizes alignment between business strategy and technical execution. For cybersecurity, the challenge is scaling your influence across all those boats. You need governance models, security standards, and automation that don’t just live in a binder—they must be embedded in every development value stream. This is where security architecture becomes crucial. You’re no longer just asking, “*Is this code secure?*” You’re asking, “*Is our system of systems resilient, compliant, and threat-aware across all layers and integrations?*” For the exam, understand SAFe’s layered complexity and how security must be equally layered—from secure backlog grooming to enterprise-level risk assessments.
 
+SAFe is organized in 4 configuration levels:
+
+1. Essential SAFe. This is the core of the framework — where the Agile Release Train (ART) operates. It includes the teams, program increments, and roles that deliver continuous value through iterative development. It focuses on aligning teams around a shared mission and cadence.
+
+2. Large Solution SAFe. This level comes into play when solutions are too big for a single Agile Release Train. It coordinates multiple ARTs and suppliers working together to build complex systems or products. It adds roles and practices for solution management and architecture.
+
+3. Portfolio SAFe. At this level, strategic themes, budgeting, and portfolio management happen. It connects enterprise strategy to execution by organizing multiple programs and large solutions. The focus is on investment funding, governance, and aligning initiatives with business goals.
+
+4. Full SAFe. This is the complete framework, combining Essential, Large Solution, and Portfolio levels. It’s designed for the largest enterprises that require coordination from team-level delivery all the way up to strategic portfolio management. It provides a comprehensive approach to scaling Agile across the entire organization.
+
 **Spiral** is less commonly used today, but it’s still important conceptually. Think of it as a hybrid of Waterfall and iterative development with a focus on risk. Projects move through repeated cycles—or spirals—each with planning, risk analysis, engineering, and evaluation. It’s like walking around a mountain in ascending circles; each loop brings you higher but also exposes you to new risks. Spiral is most useful for large, high-stakes systems like defense applications, where the cost of failure is huge. What sets Spiral apart is that risk assessment isn’t just a checkpoint; it’s the core driver of each iteration. From a security standpoint, Spiral’s biggest advantage is the formal integration of risk analysis throughout the lifecycle. Spiral forces you to consider: What could go wrong? What is the impact? How do we mitigate it before we go further? Spiral’s security mindset is proactive, not reactive, and that makes it an excellent conceptual fit for systems with long timelines and high assurance requirements.
 
 **DevOps** merges development and operations into one fast-moving, automation-heavy workflow. It’s all about reducing time to market through continuous integration and continuous delivery (CI/CD). Picture a factory where code is built, tested, and deployed on conveyor belts that never stop. It’s efficient, but if you throw insecure code onto that belt, it rolls right into production. DevOps by itself doesn’t inherently address security. In fact, when done poorly, it accelerates vulnerabilities right into your live environment. But this is where DevSecOps enters the picture.
