Update 8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md

--- a/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
+++ b/DOMAIN8: Software Development Security/8.1 - Understand and integrate security in the Software Development Life Cycle (SDLC).md
@@ -299,6 +299,14 @@ The core of change management involves several stages:
 
 Each of these stages should be understood not as bureaucratic red tape but as essential for ensuring that changes are safe, documented, reversible, and aligned with security policies. When done right, this process helps both developers and security teams collaborate smoothly, keeping innovation and protection in balance. 
 
+Change management consists of three main components:
+
+1. **Request Control**: This is the process where a proposed change is formally submitted and documented. Anyone who identifies the need for a change—whether it’s fixing a bug, adding a feature, or updating a system—creates a change request that describes what needs to be done and why.
+
+2. **Change Control**: Once a change request is submitted, it goes through change control, which involves reviewing, evaluating, and approving or rejecting the change. This ensures that every change is properly assessed for its impact, risks, and benefits before being allowed to proceed.
+
+3. **Release Control**: After a change is approved and developed, release control manages the actual deployment or rollout of the change into the live environment. This step ensures the change is delivered safely, with minimal disruption, and includes activities like testing, scheduling, and communication.
+
 :necktie: The most important aspect of change management is **control**. Control over what goes into production, who made the decision, what risks were considered, and how it can be undone if something goes wrong. Every change should have a rollback plan.
 
 Imagine deploying a new feature at 5:00 p.m. on a Friday, only to realize it crashes the system. Without rollback capabilities, you’re left scrambling all weekend. With good change control, you simply reverse the change and resume operations. This is where version control systems, automated deployment pipelines, and audit trails play a huge role—they give you the tools to track, test, and trust your changes. 
