Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -905,7 +905,7 @@ Three planes work in unison to ensure the network operates efficiently and relia
 
 - **Control Plane:** The control plane governs the operation of the data plane by determining how data should be forwarded. It uses routing protocols (like OSPF, BGP, RIP) to establish and update routing tables, ensuring packets are directed to the correct destination. The control plane is crucial for maintaining the overall structure and efficiency of the network, as it decides on optimal paths for data transfer, based on factors like network topology, traffic load, and policy rules.
 
-- **Management Plane:** The management plane involves the configuration, monitoring, and maintenance of the network. It handles administrative tasks like setting up devices, tracking performance, logging errors, and enforcing network policies. Management tools like SNMP (Simple Network Management Protocol) and NetFlow provide insights into network health, performance, and security. The management plane is key to the network’s operational oversight and troubleshooting.
+- **Management Plane:** The management plane involves the configuration, monitoring, and maintenance of the network. It handles administrative tasks like setting up devices, tracking performance, logging errors, and enforcing network policies. Management tools like SNMP (Simple Network Management Protocol) and NetFlow provide insights into network health, performance, and security. The management plane is key to the network’s operational oversight and troubleshooting. Find out more here: [4.L.2 Seeing Through the Network: Understanding NetFlow, SNMP, and Syslog](https://github.com/lorenzoleonelli/CISSP-Zero-to-Hero/blob/main/DOMAIN4%3A%20Communication%20and%20Network%20Security/4.L.2%20Seeing%20Through%20the%20Network%3A%20Understanding%20NetFlow%2C%20SNMP%2C%20and%20Syslog.md#4l2-seeing-through-the-network-understanding-netflow-snmp-and-syslog)
 
 When forwarding packets, network devices (like switches) have two primary methods of handling data: cut-through and store-and-forward.
 
