Update 4.1 Apply secure design principles in network architectures.md

--- a/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
+++ b/DOMAIN4: Communication and Network Security/4.1 Apply secure design principles in network architectures.md
@@ -90,6 +90,14 @@ At the **Network Layer**, IP addresses are used to route data between devices ac
 
 The **Transport Layer** is where end-to-end communication is managed, ensuring that data is properly sequenced and delivered without corruption or loss. This layer uses TCP (Transmission Control Protocol) and UDP (User Datagram Protocol), both of which introduce security risks. Attackers frequently exploit TCP-based attacks, such as SYN floods, session hijacking, and port scanning, to disrupt or intercept communications. Rate limiting, deep packet inspection (DPI), and Transport Layer Security (TLS) encryption are commonly used to protect against these threats.
 
+Before two computers start sending data using TCP, they perform a short “handshake” to make sure both sides are ready and can communicate reliably. The table below shows the three simple steps they follow to set up the connection.
+
+| Step | Name    | Who Sends       | What It Means          | Flags     |
+| ---- | ------- | --------------- | ---------------------- | --------- |
+| 1️⃣  | SYN     | Client → Server | “Let’s start talking”  | SYN       |
+| 2️⃣  | SYN-ACK | Server → Client | “Okay, I’m ready too”  | SYN + ACK |
+| 3️⃣  | ACK     | Client → Server | “Confirmed, let’s go!” | ACK       |
+
 :bulb: A **socket** is an endpoint for communication between two machines over a network. It serves as an interface between the application and the transport layer. A socket allows an application to send or receive data across a network. Each socket is uniquely identified by a combination of the following:
 - IP address: The unique address assigned to a device on the network (e.g., 192.168.1.1).
 - Port number: A numeric identifier that helps differentiate different services or processes on the same machine (e.g., 80 for HTTP, 443 for HTTPS).
@@ -109,6 +117,8 @@ Port 443: HTTPS (HTTP Secure) – used for encrypted web traffic.
 Port 25: SMTP (Simple Mail Transfer Protocol) – used for sending emails.
 - **Registered ports (1024–49151):** These are used by software applications for communication, but they are not as commonly associated with standardized services. Developers can register these ports with the IANA (Internet Assigned Numbers Authority) for their specific services.
 - **Dynamic or Private ports (49152–65535):** These are ephemeral ports used for short-lived communications. They are often assigned temporarily by the operating system for client-side connections, such as when your browser connects to a website. These ports are not assigned to any particular service and are typically used for the duration of the session.
+
+
 
 When a device communicates over the network, it uses a combination of the IP address and port number to ensure that data is sent to the correct application. This is what makes it possible for multiple applications on the same machine to use the same network interface.
 - **Client-side (Outbound connection)**:
