--- a/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
@@ -31,7 +31,7 @@ Decommissioning, on the other hand, is the process of retiring and removing asse
 2. Selecting and setting up systems that handle this information properly.
 3. Using administrative controls (like regular access reviews) to support the technology and ensure everything stays secure.
 
-As many other aspects of Information Security, Access management requires a balance between security and usability. If security is too strict, it can make it difficult for users to access the systems they need. On the other hand, if security is too relaxed, it puts your system’s Confidentiality, Integrity, and Availability at risk. Finding the right balance ensures that users can work efficiently without compromising security.
+:necktie: As many other aspects of Information Security, Access management requires a balance between security and usability. If security is too strict, it can make it difficult for users to access the systems they need. On the other hand, if security is too relaxed, it puts your system’s Confidentiality, Integrity, and Availability at risk. Finding the right balance ensures that users can work efficiently without compromising security.
 
 ### Open Questions ###
 
