Update 5.1 Control Physical and logical access to assets.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
@@ -1,11 +1,11 @@
 ## 5.1 Control Physical and logical access to assets ##
 
 Access control encompasses the systems and processes designed to safeguard an organization’s assets while ensuring that only authorized individuals have the appropriate level of access. Core principles of access control include:
-1. **need-to-know:** restricts access to information or resources based strictly on a user’s necessity to perform their job. Users are only given access to the specific data or systems required to complete their tasks, minimizing exposure to unnecessary or sensitive information.
-2. **least privilege:** ensures that users or systems are granted the minimum level of access necessary to perform their assigned duties. By limiting permissions, it reduces the potential damage caused by accidental misuse or unauthorized access.
-3. **separation of duties:** involves dividing responsibilities and privileges among multiple individuals or systems to prevent conflicts of interest or the misuse of power. No single person should have enough access or control to carry out critical tasks independently, reducing the risk of fraud, errors, or abuse.
+1. **Need-to-know:** restricts access to information or resources based strictly on a user’s necessity to perform their job. Users are only given access to the specific data or systems required to complete their tasks, minimizing exposure to unnecessary or sensitive information.
+2. **Least privilege:** ensures that users or systems are granted the minimum level of access necessary to perform their assigned duties. By limiting permissions, it reduces the potential damage caused by accidental misuse or unauthorized access.
+3. **Separation of duties:** involves dividing responsibilities and privileges among multiple individuals or systems to prevent conflicts of interest or the misuse of power. No single person should have enough access or control to carry out critical tasks independently, reducing the risk of fraud, errors, or abuse.
 
-:necktie: These controls apply across all organizational levels and to all asset types (both physical and logical), ensuring comprehensive protection and regulated access.
+:necktie: These controls apply across all organizational levels and to all asset types (both physical and logical), ensuring comprehensive protection and regulated access. Never make the mistake, while approaching your exam and after you'll pass it, that managers and C-levels can avoid the 3 controls above mentioned.
 
 Access control systems are designed to regulate who or what (referred to as **subjects**) can interact with specific assets (referred to as **objects**). These objects include data such as files and system resources like networks and computing power. In a physical context, access control involves securing facilities, like offices and server rooms, which are considered critical assets.
 
@@ -28,17 +28,17 @@ The following picture recaps some of the concepts above explained and the concep
 
 As a security professional you should recognize, assess and protect all the following assets:
 
-**Information:** This is all the data the organization stores on servers, computers, and smaller devices. It can be simple files or large databases. Logical access controls prevent unauthorized access to this information.
+- **Information:** This is all the data the organization stores on servers, computers, and smaller devices. It can be simple files or large databases. Logical access controls prevent unauthorized access to this information.
 
-**Systems:** These are IT systems that provide services, like a file server or a web server supporting e-commerce. Permissions manage access to these systems.
+- **Systems:** These are IT systems that provide services, like a file server or a web server supporting e-commerce. Permissions manage access to these systems.
 
-**Devices:** This includes routers, switches, servers, computers, tablets, smartphones, and printers. Even if employees use personal devices, any organizational data stored on them is still an asset.
+- **Devices:** This includes routers, switches, servers, computers, tablets, smartphones, and printers. Even if employees use personal devices, any organizational data stored on them is still an asset.
 
-**Facilities:** This refers to the physical locations owned or rented by the organization, like buildings or rooms. Physical security controls protect these spaces.
+- **Facilities:** This refers to the physical locations owned or rented by the organization, like buildings or rooms. Physical security controls protect these spaces.
 
-**Applications:** Applications offer access to data and services. Managing access to these with permissions adds another layer of security.
+- **Applications:** Applications offer access to data and services. Managing access to these with permissions adds another layer of security.
 
-**Services:** These are the activities or functions provided by an organization’s systems, like email or cloud storage. Controlling access to services ensures they’re used properly and securely.
+- **Services:** These are the activities or functions provided by an organization’s systems, like email or cloud storage. Controlling access to services ensures they’re used properly and securely.
 
 
 :bulb: In most operating systems, access control rules define the permissions or rights that a user (or subject) has over resources (objects) such as files, directories, or processes. These rules typically fall under various logical access modes that determine the level of interaction a subject can have with an object. The basic access modes are:
