Update 2.06 Determine data security controls and compliance requirements.md

--- a/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
+++ b/DOMAIN2: Asset Security/2.06 Determine data security controls and compliance requirements.md
@@ -36,6 +36,10 @@ The following table recaps what we have seen so far:
 | **In use**       | Data loaded into memory (RAM, CPU cache) while being processed  | Memory scraping, side-channel attacks                                | Last-moment decryption, secure enclaves (TEE), emerging approaches like homomorphic encryption                 |
 | **Common goal** | Ensure **Confidentiality**, **Integrity**, and **Availability** (CIA triad) for every data state       | —                                                                      | Encryption and robust access control across all states                                                           |
 
+The following picture tries to recap very shortly some things we have seen so far about asset management:
+
+<img width="5257" height="2854" alt="Assets_Mgmt" src="https://github.com/user-attachments/assets/77117052-79b8-498a-9f6b-b0031021854a" />
+
 
 ### Open Questions ###
 
