--- a/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.0 Preface.md
@@ -33,6 +33,11 @@ Decommissioning, on the other hand, is the process of retiring and removing asse
 
 :necktie: As many other aspects of Information Security, Access management requires a balance between security and usability. If security is too strict, it can make it difficult for users to access the systems they need. On the other hand, if security is too relaxed, it puts your system’s Confidentiality, Integrity, and Availability at risk. Finding the right balance ensures that users can work efficiently without compromising security.
 
+:necktie: IAM really has become the new perimeter — not because we chose it, but because the old perimeter simply vanished.
+With cloud, SaaS, remote work, and APIs everywhere, the network edge dissolved… but identity didn’t.
+Today the “front door” isn’t a firewall. It’s the moment someone authenticates.
+
+
 ### Open Questions ###
 
 1. What is the primary purpose of Identity and Access Management (IAM)?
