Update 5.1 Control Physical and logical access to assets.md

--- a/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
+++ b/DOMAIN5: Identity and Access Management (IAM)/5.1 Control Physical and logical access to assets.md
@@ -5,7 +5,7 @@ Access control encompasses the systems and processes designed to safeguard an or
 2. **Least privilege:** ensures that users or systems are granted the minimum level of access necessary to perform their assigned duties. By limiting permissions, it reduces the potential damage caused by accidental misuse or unauthorized access.
 3. **Separation of duties:** involves dividing responsibilities and privileges among multiple individuals or systems to prevent conflicts of interest or the misuse of power. No single person should have enough access or control to carry out critical tasks independently, reducing the risk of fraud, errors, or abuse.
 
-:necktie: These controls apply across all organizational levels and to all asset types (both physical and logical), ensuring comprehensive protection and regulated access. Never make the mistake, while approaching your exam and after you'll pass it, that managers and C-levels can avoid the 3 controls above mentioned.
+:necktie: These controls apply across all organizational levels and to all asset types (both physical and logical), ensuring comprehensive protection and regulated access. Never make the mistake, while approaching your exam and after you'll pass it, to think that managers and C-levels can avoid the 3 controls above mentioned.
 
 Access control systems are designed to regulate who or what (referred to as **subjects**) can interact with specific assets (referred to as **objects**). These objects include data such as files and system resources like networks and computing power. In a physical context, access control involves securing facilities, like offices and server rooms, which are considered critical assets.
 
